更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,274 +1,263 @@
 # ======================
-# 基础架构与固件配置
+# 基础架构与固件配置（精简）
 # ======================
-CONFIG_TARGET_x86=y
-CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
-CONFIG_TARGET_KERNEL_PARTSIZE=32
-CONFIG_TARGET_ROOTFS_PARTSIZE=944
-CONFIG_GRUB_EFI_IMAGES=y
-CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_x86_64=y                  # 仅保留x86_64通用架构（原x86重复项剔除）
+CONFIG_TARGET_x86_64_DEVICE_GENERIC=y   # 通用设备支持
+CONFIG_TARGET_KERNEL_PARTSIZE=32        # 内核分区保持32MB（足够64位内核）
+CONFIG_TARGET_ROOTFS_PARTSIZE=944       # 根分区944MB（适配常见存储）
+CONFIG_GRUB_EFI_IMAGES=y                # EFI启动支持（保留）
+CONFIG_TARGET_IMAGES_GZIP=y             # 镜像压缩（平衡空间与加载速度）
+CONFIG_TARGET_ROOTFS_SQUASHFS=y         # SquashFS根文件系统（高效只读）
 
 # ======================
-# 工具链与编译优化
+# 工具链与编译优化（性能优先）
 # ======================
-CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
-CONFIG_LLVM_TARGET_X86=y
-CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=y
-CONFIG_KERNEL_LTO=y
-CONFIG_KERNEL_LTO_CLANG_THIN=y
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_KERNEL_OPTIMIZE_O3=y
-CONFIG_KERNEL_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_OPTIMIZE_INLINING=y
-CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y
-CONFIG_KERNEL_BINUTILS_STRINGS=y
-CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
+CONFIG_KERNEL_CLANG_LLVM=y              # Clang编译器（现代优化更好）
+CONFIG_LLVM_TARGET_ARCH="x86-64-v2"     # 针对x86-64-v2指令集优化（J4125支持）
+CONFIG_LLVM_TARGET_X86=y                # 兼容x86基础指令集
+CONFIG_USE_LLD=y                        # LLD链接器（比GNU ld更快）
+CONFIG_LTO_CLANG_THIN=y                 # Clang ThinLTO（优化代码体积与性能）
+CONFIG_KERNEL_LTO=y                     # 内核启用LTO（提升执行效率）
+CONFIG_KERNEL_LTO_CLANG_THIN=y          # 内核ThinLTO（与工具链一致）
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y    # 编译器优化性能（覆盖原重复项）
+CONFIG_KERNEL_OPTIMIZE_O3=y             # 内核函数级O3优化（关键性能优化）
+CONFIG_OPTIMIZE_INLINING=y              # 激进函数内联（减少调用开销）
+CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y        # 针对本地CPU优化（J4125专属）
+CONFIG_KERNEL_BINUTILS_STRINGS=y        # 二进制工具优化（保留）
+CONFIG_ZLIB_OPTIMIZE_SPEED=y            # Zlib压缩速度优化（非压缩场景可忽略）
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"  # 最小化LLVM组件（减少冗余）
 
 # ======================
-# 安全增强特性
+# 安全增强特性（关键保留）
 # ======================
-CONFIG_CFI_CLANG=y
-CONFIG_CFI_CLANG_SHADOW=y
-CONFIG_STRICT_KERNEL_RWX=y
-CONFIG_HARDENED_USERCOPY=y
-CONFIG_INIT_STACK_ALL_ZERO=y
-CONFIG_STACKPROTECTOR_STRONG=y
-CONFIG_RANDUMIZE_KSTACK_OFFSET=y
-CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_ZERO_CALL_USED_REGS=y
-CONFIG_SECURITY_SELINUX=y
-CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
-CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
-CONFIG_CRYPTO_DEV_PADLOCK=y
-CONFIG_CRYPTO_DEV_PADLOCK_AES=y
-CONFIG_CRYPTO_DEV_PADLOCK_SHA=y
+CONFIG_CFI_CLANG=y                      # Clang控制流完整性（防ROP攻击）
+CONFIG_CFI_CLANG_SHADOW=y               # CFI影子栈（增强控制流保护）
+CONFIG_STRICT_KERNEL_RWX=y              # 严格内核读写执行权限（防内存越界）
+CONFIG_HARDENED_USERCOPY=y              # 用户态拷贝硬化（防缓冲区溢出）
+CONFIG_INIT_STACK_ALL_ZERO=y            # 初始化栈全零（防信息泄露）
+CONFIG_STACKPROTECTOR_STRONG=y          # 栈溢出保护（强模式，性能影响可控）
+CONFIG_RANDUMIZE_KSTACK_OFFSET=y        # 内核栈随机偏移（防栈地址预测）
+CONFIG_STATIC_USERMODEHELPER=y          # 静态用户态助手（减少动态链接开销）
+CONFIG_ZERO_CALL_USED_REGS=y            # 清零调用后寄存器（防信息泄露）
+CONFIG_SECURITY_SELINUX=y               # SELinux强制访问控制（核心安全）
+CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y  # 相对跳转标签（性能无关，保留）
+CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y  # 栈帧检测（保留）
+CONFIG_CRYPTO_DEV_PADLOCK=y             # Padlock加密加速（硬件加速保留）
+CONFIG_CRYPTO_DEV_PADLOCK_AES=y         # AES硬件加速（关键）
+CONFIG_CRYPTO_DEV_PADLOCK_SHA=y         # SHA硬件加速（关键）
 
 # ======================
-# 硬件特定优化 (Intel J4125)
+# 硬件特定优化（Intel J4125）
 # ======================
-CONFIG_SCHED_PDS=y
-CONFIG_SCHED_MC_PRIO=y
-CONFIG_PREEMPT_DYNAMIC=y
-CONFIG_NO_HZ_FULL=y
-CONFIG_NO_HZ_FULL_ALL=y
-CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SCHED_CORE=y
-CONFIG_SCHED_MC=y
-CONFIG_SCHED_HRTICK=y
-CONFIG_RCU_BOOST=y
-CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_SCHED_CORE_LLC=y
-CONFIG_CPU_ISOLATION=y
-CONFIG_MIGRATION=y
-CONFIG_RCU_NOCB_CPU=y
-CONFIG_PREEMPT=y
-CONFIG_HZ=1000
-CONFIG_INTEL_EPB=y
-CONFIG_INTEL_PSTATE=y
-CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_ACPI_CPPC_CPUFREQ=y
-CONFIG_ACPI_CPPC_LIB=y
-CONFIG_INTEL_TCC=y
-CONFIG_CRYPTO_AES_NI_INTEL=y
+CONFIG_SCHED_PDS=y                      # 性能导向调度器（J4125低延迟优化）
+CONFIG_SCHED_MC_PRIO=y                  # 多核优先级调度（4核适配）
+CONFIG_PREEMPT_DYNAMIC=y                # 动态抢占模式（平衡延迟与吞吐）
+CONFIG_NO_HZ_FULL=y                     # 无时钟滴答（全核空闲时省电）
+CONFIG_NO_HZ_FULL_ALL=y                 # 所有核心启用nohz_full（低延迟关键）
+CONFIG_HIGH_RES_TIMERS=y                # 高精度定时器（精确调度）
+CONFIG_SCHED_CORE=y                     # 核心调度（减少跨核迁移）
+CONFIG_SCHED_MC=y                       # 多核调度支持
+CONFIG_SCHED_HRTICK=y                   # 高分辨率tick（低延迟调度）
+CONFIG_RCU_BOOST=y                      # RCU加速（减少锁竞争）
+CONFIG_SOFTIRQ_ON_OWN_STACK=y           # 软中断独立栈（防栈溢出）
+CONFIG_SCHED_CORE_LLC=y                 # LLC感知核心调度（缓存优化）
+CONFIG_CPU_ISOLATION=y                  # CPU隔离（关键核心保留给转发）
+CONFIG_MIGRATION=y                      # 进程迁移支持（动态负载均衡）
+CONFIG_RCU_NOCB_CPU=y                   # RCU回调无CPU（减少主核压力）
+CONFIG_PREEMPT=y                        # 抢占式内核（低延迟基础）
+CONFIG_HZ=1000                          # 高频率时钟（1ms粒度，低延迟关键）
+CONFIG_INTEL_EPB=y                      # 增强型性能调节（节能不影响峰值）
+CONFIG_INTEL_PSTATE=y                   # Intel P-State驱动（动态调频）
+CONFIG_INTEL_PSTATE_HWP=y               # 硬件P-State（自动最优频率）
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y  # 默认性能模式（关键！）
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y       # 性能调节器（锁定高频）
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y         # 调度器辅助调节（动态适配）
+CONFIG_ACPI_CPPC_CPUFREQ=y              # ACPI CPPC调频（硬件级优化）
+CONFIG_ACPI_CPPC_LIB=y                  # CPPC库支持
+CONFIG_INTEL_TCC=y                      # 温度控制（防止降频）
+CONFIG_CRYPTO_AES_NI_INTEL=y            # AES-NI指令加速（关键）
 
 # ======================
-# 内存管理优化 (8GB专用)
+# 内存管理优化（8GB专用）
 # ======================
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_LRU_GEN=y
-CONFIG_LRU_GEN_ENABLED=y
-CONFIG_LRU_GEN_WALKS_MMU=y
-CONFIG_COMPACTION=y
-CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
-CONFIG_DAMON=y
-CONFIG_DAMON_VADDR=y
-CONFIG_DAMON_PADDR=y
-CONFIG_DAMON_RECLAIM=y
-CONFIG_PAGE_POOL=y
-CONFIG_PAGE_POOL_STATS=y
-CONFIG_SLUB=y
-CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_STATS=y
-CONFIG_KFENCE=y
-CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
-CONFIG_ARCH_WANT_OPTIMIZE_DAX_VMEMMAP=y
-CONFIG_ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP=y
-CONFIG_SLAB_FREELIST_RANDOM=y
-CONFIG_SLAB_FREELIST_HARDENED=y
-CONFIG_RANDOMIZE_BASE=y
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y   # 透明大页（按需启用，减少TLB缺失）
+CONFIG_LRU_GEN=y                        # 新一代LRU算法（高效内存回收）
+CONFIG_LRU_GEN_ENABLED=y                # 启用LRU_GEN（替代传统LRU）
+CONFIG_LRU_GEN_WALKS_MMU=y              # MMU辅助LRU扫描（减少锁竞争）
+CONFIG_COMPACTION=y                     # 内存压缩（碎片整理）
+CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y       # 分配时初始化内存（防信息泄露）
+CONFIG_DAMON=y                          # 内存监控（动态优化内存使用）
+CONFIG_DAMON_VADDR=y                    # 虚拟地址监控
+CONFIG_DAMON_PADDR=y                    # 物理地址监控
+CONFIG_DAMON_RECLAIM=y                  # 主动回收内存（防OOM）
+CONFIG_PAGE_POOL=y                      # 网络页池（加速skb分配，关键！）
+CONFIG_PAGE_POOL_STATS=y                # 页池统计（监控用）
+CONFIG_SLUB=y                           # SLUB分配器（现代内核默认）
+CONFIG_SLUB_CPU_PARTIAL=y               # CPU局部缓存（减少全局锁）
+CONFIG_SLUB_STATS=y                     # SLUB统计（监控用）
+CONFIG_KFENCE=y                         # 内存错误检测（调试用，可选）
+CONFIG_ARCH_WANT_GENERAL_HUGETLB=y      # 通用大页支持（非必需可忽略）
+CONFIG_ARCH_WANT_OPTIMIZE_DAX_VMEMMAP=y # DAX虚拟内存优化（非SSD可忽略）
+CONFIG_ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP=y # 大页虚拟内存优化（非必需）
+CONFIG_SLAB_FREELIST_RANDOM=y           #  slab空闲列表随机化（防预测）
+CONFIG_SLAB_FREELIST_HARDENED=y         #  slab空闲列表硬化（安全）
+CONFIG_RANDOMIZE_BASE=y                 # KASLR（安全，性能影响小）
 
 # ======================
-# 网络协议栈优化
+# 网络协议栈优化（线速关键）
 # ======================
-CONFIG_TCP_AO=y
-CONFIG_TCP_MD5SIG=y
-CONFIG_TCP_NO_TSQ=y
-CONFIG_NET_FLOW_LIMIT=y
-CONFIG_TCP_CONG_BBR3=y
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_ZERO_COPY_RECEIVE=y
-CONFIG_CONNECT_IP_ROUTE_MULTIPATH=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_NET_DEVLINK=y
-CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y
-CONFIG_NET_SCH_MQPRIO=y
-CONFIG_NET_EMATCH=y
-CONFIG_NET_ACT_MIRRED=y
-CONFIG_IP_TUNNEL=y
-CONFIG_NET_SCH_TAPRIO=y
-CONFIG_NET_SCH_MULTIQ=y
-CONFIG_NET_SCH_PIE=y
-CONFIG_NET_SCH_FQ_PIE=y
-CONFIG_NET_NS=y
-CONFIG_NET_NS_DELAYED=y
+CONFIG_TCP_AO=y                         # TCP认证选项（安全，保留）
+CONFIG_TCP_NO_TSQ=y                     # 禁用TCP时间戳队列（减少延迟）
+CONFIG_NET_FLOW_LIMIT=y                 # 流量限制（防过载）
+CONFIG_TCP_CONG_BBR3=y                  # BBRv3拥塞控制（高吞吐低延迟）
+CONFIG_TCP_CONG_ADVANCED=y              # 高级拥塞控制（启用BBR3需要）
+CONFIG_TCP_ZERO_COPY_RECEIVE=y          # TCP零拷贝接收（减少内存拷贝）
+CONFIG_CONNECT_IP_ROUTE_MULTIPATH=y     # 多路径路由（负载均衡）
+CONFIG_IPV6_ROUTER_PREF=y               # IPv6路由优先级（保留）
+CONFIG_IP_MULTIPLE_TABLES=y             # 多IP路由表（策略路由）
+CONFIG_NET_DEVLINK=y                    # NetDevLink（硬件抽象）
+CONFIG_NET_SCH_DEFAULT=y                # 默认调度器
+CONFIG_DEFAULT_FQ_CODEL=y               # 默认fq_codel调度（公平+延迟控制）
+CONFIG_NET_SCH_MQPRIO=y                 # MQPRIO多队列（硬件队列映射）
+CONFIG_NET_EMATCH=y                     # 匹配扩展（保留）
+CONFIG_NET_ACT_MIRRED=y                 # 镜像动作（保留）
+CONFIG_IP_TUNNEL=y                      # IP隧道（保留）
+CONFIG_NET_SCH_TAPRIO=y                 # TAPRIO时间感知调度（QoS）
+CONFIG_NET_SCH_MULTIQ=y                 # MULTIQ多队列（硬件适配）
+CONFIG_NET_SCH_PIE=y                    # PIE主动队列管理（低延迟）
+CONFIG_NET_SCH_FQ_PIE=y                 # FQ+PIE（公平+低延迟）
+CONFIG_NET_NS=y                         # 网络命名空间（容器支持）
+CONFIG_NET_NS_DELAYED=y                 # 延迟网络命名空间（优化启动）
 
 # ======================
-# Netfilter配置
+# Netfilter配置（高效转发）
 # ======================
-CONFIG_NF_NAT_FULLCONE=y
-CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_NAT=y
-CONFIG_NF_NAT_NEEDED=y
-CONFIG_NETFILTER=y
-CONFIG_NETFILTER_ADVANCED=y
-CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_NF_DEFRAG_IPV4=y
-CONFIG_NF_DEFRAG_IPV6=y
-CONFIG_NF_NAT_IPV4=y
-CONFIG_NF_NAT_IPV6=y
-CONFIG_NF_NAT_MASQUERADE_IPV4=y
-CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NF_TABLES=y
-CONFIG_NF_TABLES_INET=y
-CONFIG_NF_TABLES_IPV4=y
-CONFIG_NF_TABLES_IPV6=y
-CONFIG_NF_TABLES_NETDEV=y
-CONFIG_NF_TABLES_BRIDGE=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y
-CONFIG_NET_ACT_POLICE=y
+CONFIG_NF_NAT_FULLCONE=y                # 全锥NAT（保留）
+CONFIG_NF_CONNTRACK=y                   # 连接跟踪（核心）
+CONFIG_NF_CONNTRACK_EVENTS=y            # 连接跟踪事件（异步通知）
+CONFIG_NF_NAT=y                         # NAT核心（保留）
+CONFIG_NF_NAT_NEEDED=y                  # NAT必需（保留）
+CONFIG_NETFILTER=y                      # Netfilter框架（核心）
+CONFIG_NETFILTER_ADVANCED=y             # 高级Netfilter（保留）
+CONFIG_NF_CONNTRACK_IPV4=y              # IPv4连接跟踪（保留）
+CONFIG_NF_CONNTRACK_IPV6=y              # IPv6连接跟踪（保留）
+CONFIG_NF_DEFRAG_IPV4=y                 # IPv4分片重组（必需）
+CONFIG_NF_DEFRAG_IPV6=y                 # IPv6分片重组（必需）
+CONFIG_NF_NAT_IPV4=y                    # IPv4 NAT（保留）
+CONFIG_NF_NAT_IPV6=y                    # IPv6 NAT（保留）
+CONFIG_NF_NAT_MASQUERADE_IPV4=y         # IPv4伪装NAT（保留）
+CONFIG_NF_NAT_MASQUERADE_IPV6=y         # IPv6伪装NAT（保留）
+CONFIG_NF_TABLES=y                      # nftables框架（替代iptables）
+CONFIG_NF_TABLES_INET=y                 # INET协议族支持（保留）
+CONFIG_NF_TABLES_IPV4=y                 # IPv4 nftables（保留）
+CONFIG_NF_TABLES_IPV6=y                 # IPv6 nftables（保留）
+CONFIG_NF_TABLES_NETDEV=y               # 网络设备nftables（保留）
+CONFIG_NF_TABLES_BRIDGE=y               # 桥接nftables（保留）
+CONFIG_NETFILTER_FLOW_OFFLOAD=y         # 流卸载（硬件加速关键！）
+CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y # 流卸载目标（必需）
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y   # 连接跟踪匹配（保留）
+CONFIG_NETFILTER_XT_MATCH_STATE=y       # 状态匹配（保留）
+CONFIG_NET_ACT_POLICE=y                 # 流量整形（保留）
 
 # ======================
-# 网卡驱动优化 (Intel I226)
+# 网卡驱动优化（Intel I226）
 # ======================
-CONFIG_IGC_DCA=y
-CONFIG_IGC=y
-CONFIG_IGC_HWMON=y
-CONFIG_IGC_DIM=y
-CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_LRO=y
-CONFIG_IGC_TSN=y
-CONFIG_IGC_LATENCY_TOLERANCE=y
-CONFIG_IGC_TAPRIO=y
-CONFIG_IGC_QUEUES=4
-CONFIG_IGC_RX_POLLING=y
-CONFIG_IGC_RX_NAPI=y
-CONFIG_IGC_TX_NAPI=y
-CONFIG_IGC_GSO=y
-CONFIG_IGC_GRO=y
-CONFIG_IGC_RX_COPYBREAK=1024
-CONFIG_IGC_RX_NAPI_WEIGHT=256
-CONFIG_IGC_RSS=4
-CONFIG_IGC_TSO=y
+CONFIG_IGC_DCA=y                        # 直接缓存访问（减少内存访问延迟）
+CONFIG_IGC=y                            # Intel I226驱动（核心）
+CONFIG_IGC_HWMON=y                      # 硬件监控（温度/电压）
+CONFIG_IGC_DIM=y                        # DCA接口管理（保留）
+CONFIG_IGC_VLAN_STRIPPING=y             # VLAN标签剥离（硬件加速）
+CONFIG_IGC_LRO=y                        # 大接收卸载（合并小包，提升吞吐）
+CONFIG_IGC_TSN=y                        # 时间敏感网络（低延迟关键）
+CONFIG_IGC_LATENCY_TOLERANCE=y          # 延迟容忍度配置（低延迟优化）
+CONFIG_IGC_TAPRIO=y                     # TAPRIO时间调度（QoS）
+CONFIG_IGC_QUEUES=4                     # 4队列（匹配J4125 4核）
+CONFIG_IGC_RX_POLLING=y                 # RX轮询模式（减少中断开销）
+CONFIG_IGC_RX_NAPI=y                    # NAPI接收（批处理中断）
+CONFIG_IGC_TX_NAPI=y                    # NAPI发送（批处理中断）
+CONFIG_IGC_GSO=y                        # 通用分段卸载（减少CPU负担）
+CONFIG_IGC_GRO=y                        # 大接收卸载（合并小包）
+CONFIG_IGC_RX_COPYBREAK=1024            # 接收拷贝阈值（1KB，平衡拷贝与中断）
+CONFIG_IGC_RX_NAPI_WEIGHT=256           # NAPI接收权重（256包/次，批处理）
+CONFIG_IGC_RSS=4                        # RSS队列数（4队列，匹配CPU核心）
+CONFIG_IGC_TSO=y                        # 发送分段卸载（TSO，大包加速）
 
 # ======================
-# 中断与队列优化
+# 中断与队列优化（低延迟关键）
 # ======================
-CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_PCI_MSI=y
-CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_POLL=y
-CONFIG_IRQ_FORCED_THREADING=y
-CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_HARDIRQS_SW_RESEND=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+CONFIG_XPS=y                            # 发送包分发（多队列负载均衡）
+CONFIG_XPS_DEFAULT_QUEUES=4             # 默认XPS队列数（4队列）
+CONFIG_RPS=y                            # 接收包分发（多队列负载均衡）
+CONFIG_RFS_ACCEL=y                      # RFS加速（软中断负载均衡）
+CONFIG_PCI_MSI=y                        # MSI中断（减少共享中断）
+CONFIG_IRQ_AFFINITY_HINT=y              # 中断亲和性提示（引导绑定）
+CONFIG_PCI_MSI_IRQ_DOMAIN=y             # MSI中断域（硬件抽象）
+CONFIG_IRQ_POLL=y                       # 中断轮询模式（减少硬中断次数）
+CONFIG_IRQ_FORCED_THREADING=n           # 禁用强制中断线程化（减少延迟）
+CONFIG_GENERIC_IRQ_IPI=y                # 通用IPI中断（多核通信）
+CONFIG_IRQ_TIME_ACCOUNTING=y            # 中断时间统计（监控用）
+CONFIG_HARDIRQS_SW_RESEND=y             # 软中断重发（防丢失）
+CONFIG_IRQ_DOMAIN_HIERARCHY=y           # 中断域层级（硬件抽象）
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y # 有效中断亲和性掩码（精确绑定）
 
 # ======================
-# 文件系统与模块
+# 文件系统与模块（精简）
 # ======================
-CONFIG_MODULE_COMPRESS_XZ=y
-CONFIG_SQUASHFS_XZ=y
-CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
-CONFIG_BCACHEFS=y
-CONFIG_FS_VERITY=y
-CONFIG_PAGE_SIZE_4KB=y
+CONFIG_MODULE_COMPRESS_XZ=y             # 模块XZ压缩（节省空间）
+CONFIG_SQUASHFS_XZ=y                    # SquashFS XZ压缩（根文件系统）
+CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y   # 多核SquashFS解压（加速启动）
+CONFIG_BCACHEFS=y                       # BCachefs文件系统（可选，高性能）
+CONFIG_FS_VERITY=y                      # 文件系统验证（安全，保留）
+CONFIG_PAGE_SIZE_4KB=y                  # 4KB页大小（x86标准）
 
 # ======================
-# 内核模块配置
+# 内核模块配置（按需精简）
 # ======================
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-fq=y
-CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-sched-connmark=y
-CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-bonding=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-nft-core=y
-CONFIG_PACKAGE_kmod-nft-netdev=y
-CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-nft-nat=y
-CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y
-CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-nf-flowoffload=y
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
+# 网络调度模块
+CONFIG_PACKAGE_kmod-sched-core=y        # 调度核心模块
+CONFIG_PACKAGE_kmod-sched-fq=y          # fq调度模块（fq_codel依赖）
+CONFIG_PACKAGE_kmod-sched-cake=y        # cake调度模块（可选）
+CONFIG_PACKAGE_kmod-sched-connmark=y    # 连接标记模块（NAT依赖）
+# 网络功能模块
+CONFIG_PACKAGE_kmod-ifb=y               # 虚拟接口模块（流量整形）
+CONFIG_PACKAGE_kmod-bonding=y           # 绑定模块（多网卡聚合）
+CONFIG_PACKAGE_kmod-tcp-bbr=y           # TCP BBR模块（拥塞控制）
+CONFIG_PACKAGE_kmod-nft-core=y          # nftables核心模块
+CONFIG_PACKAGE_kmod-nft-netdev=y        # 网络设备nftables模块
+CONFIG_PACKAGE_kmod-nft-bridge=y        # 桥接nftables模块
+CONFIG_PACKAGE_kmod-nft-nat=y           # NAT nftables模块
+CONFIG_PACKAGE_kmod-nft-offload=y       # 流卸载nftables模块
+CONFIG_PACKAGE_kmod-nft-socket=y        # 套接字nftables模块
+CONFIG_PACKAGE_kmod-nft-fullcone=y      # 全锥NAT模块
+CONFIG_PACKAGE_kmod-nf-flow=y           # 流处理模块（硬件加速）
+CONFIG_PACKAGE_kmod-nf-flowoffload=y    # 流卸载模块（关键）
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y # 连接跟踪netlink接口
+CONFIG_PACKAGE_kmod-nf-reject=y         # 拒绝模块（防火墙）
+CONFIG_PACKAGE_kmod-crypto-sha256=y     # SHA256加密模块（硬件加速依赖）
+CONFIG_PACKAGE_kmod-fs-ntfs3=y          # NTFS文件系统（可选）
 
 # ======================
-# 用户态工具与库
+# 用户态工具与库（监控/管理）
 # ======================
-CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_nftables-json=y
-CONFIG_PACKAGE_libnftnl=y
-CONFIG_PACKAGE_libtirpc=y
-CONFIG_PACKAGE_clang=y
-CONFIG_PACKAGE_llvm=y
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_nftables=y               # nftables主程序
+CONFIG_PACKAGE_nftables-json=y          # JSON输出支持（API用）
+CONFIG_PACKAGE_libnftnl=y               # nftables库（用户态API）
+CONFIG_PACKAGE_libtirpc=y               # 远程过程调用库（可选）
+CONFIG_PACKAGE_clang=y                  # Clang编译器（交叉编译用）
+CONFIG_PACKAGE_llvm=y                   # LLVM工具链（保留）
+CONFIG_PACKAGE_ip-full=y                # 完整ip工具集（ifconfig/ip等）
+CONFIG_PACKAGE_htop=y                   # 进程监控工具（调试用）
+CONFIG_PACKAGE_iperf3=y                 # 网络性能测试（验证线速）
+CONFIG_PACKAGE_ethtool=y                # 网卡配置工具（查看驱动状态）
+CONFIG_PACKAGE_openssl-util=y           # OpenSSL工具（证书管理等）
+CONFIG_PACKAGE_irqbalance=y             # 中断负载均衡（可选，与手动绑定冲突时禁用）
+CONFIG_PACKAGE_ipv6helper=y             # IPv6辅助工具（可选）
 
 # ======================
-# LuCI应用配置
+# LuCI应用配置（精简）
 # ======================
-CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-filemanager=y
-CONFIG_PACKAGE_luci-app-irqbalance=y
-
-# ======================
-# IPv6支持
-# ======================
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_ROUTE_INFO=y
-CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
-CONFIG_IPV6_SUBTREES=y
+CONFIG_PACKAGE_luci-app-arpbind=y       # ARP绑定管理（网络配置）
+CONFIG_PACKAGE_luci-app-diskman=y       # 磁盘管理（存储监控）
+CONFIG_PACKAGE_luci-app-oaf=y           # 应用防火墙（可选）
+CONFIG_PACKAGE_luci-app-filemanager=y   # 文件管理器（可选）
+CONFIG_PACKAGE_luci-app-irqbalance=y    # irqbalance管理（可选）
