--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,6 +1,7 @@
 # ======================
 # 基础架构与固件配置
 # ======================
+CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
