更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -15,38 +15,69 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
+CONFIG_LLVM_TARGET_X86=y
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
+CONFIG_KERNEL_LTO=y
 CONFIG_KERNEL_LTO_CLANG_THIN=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
+CONFIG_KERNEL_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy"
+CONFIG_KERNEL_BINUTILS_STRINGS=y
+CONFIG_ZLIB_OPTIMIZE_SPEED=y
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
 
 # ======================
 # 安全增强特性
 # ======================
+CONFIG_CFI_CLANG=y
+CONFIG_CFI_CLANG_SHADOW=y
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_HARDENED_USERCOPY=y
+CONFIG_INIT_STACK_ALL_ZERO=y
 CONFIG_STACKPROTECTOR_STRONG=y
+CONFIG_RANDUMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_ZERO_CALL_USED_REGS=y
+CONFIG_SECURITY_SELINUX=y
+CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
+CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
+CONFIG_CRYPTO_DEV_PADLOCK=y
 CONFIG_CRYPTO_DEV_PADLOCK_AES=y
 CONFIG_CRYPTO_DEV_PADLOCK_SHA=y
 
 # ======================
 # 硬件特定优化 (Intel J4125)
 # ======================
+CONFIG_SCHED_PDS=y
+CONFIG_SCHED_MC_PRIO=y
 CONFIG_PREEMPT_DYNAMIC=y
-CONFIG_PREEMPT=y
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_FULL_ALL=y
 CONFIG_HIGH_RES_TIMERS=y
+CONFIG_SCHED_CORE=y
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_HRTICK=y
+CONFIG_RCU_BOOST=y
+CONFIG_SOFTIRQ_ON_OWN_STACK=y
+CONFIG_SCHED_CORE_LLC=y
+CONFIG_CPU_ISOLATION=y
+CONFIG_MIGRATION=y
+CONFIG_RCU_NOCB_CPU=y
+CONFIG_PREEMPT=y
 CONFIG_HZ=1000
 CONFIG_INTEL_EPB=y
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_ACPI_CPPC_CPUFREQ=y
+CONFIG_ACPI_CPPC_LIB=y
+CONFIG_INTEL_TCC=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
 
 # ======================
@@ -56,91 +87,173 @@ CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
+CONFIG_COMPACTION=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_DAMON=y
+CONFIG_DAMON_VADDR=y
+CONFIG_DAMON_PADDR=y
+CONFIG_DAMON_RECLAIM=y
+CONFIG_PAGE_POOL=y
+CONFIG_PAGE_POOL_STATS=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
+CONFIG_SLUB_STATS=y
+CONFIG_KFENCE=y
+CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
+CONFIG_ARCH_WANT_OPTIMIZE_DAX_VMEMMAP=y
+CONFIG_ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_RANDOMIZE_BASE=y
 
 # ======================
-# 网络协议栈优化 (64字节线速)
+# 网络协议栈优化
 # ======================
+CONFIG_TCP_AO=y
+CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_TCP_CONG_BBR3=y
+CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
+CONFIG_CONNECT_IP_ROUTE_MULTIPATH=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IP_MULTIPLE_TABLES=y
+CONFIG_NET_DEVLINK=y
+CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_NET_SCH_MQPRIO=y
+CONFIG_NET_EMATCH=y
+CONFIG_NET_ACT_MIRRED=y
+CONFIG_IP_TUNNEL=y
 CONFIG_NET_SCH_TAPRIO=y
+CONFIG_NET_SCH_MULTIQ=y
+CONFIG_NET_SCH_PIE=y
+CONFIG_NET_SCH_FQ_PIE=y
+CONFIG_NET_NS=y
 CONFIG_NET_NS_DELAYED=y
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4
 
 # ======================
 # Netfilter配置
 # ======================
+CONFIG_NF_NAT_FULLCONE=y
 CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_NAT=y
-CONFIG_NF_NAT_MASQUERADE=y
+CONFIG_NF_NAT_NEEDED=y
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NF_CONNTRACK_IPV4=y
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_DEFRAG_IPV4=y
+CONFIG_NF_DEFRAG_IPV6=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
+CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_INET=y
+CONFIG_NF_TABLES_IPV4=y
+CONFIG_NF_TABLES_IPV6=y
+CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_BRIDGE=y
 CONFIG_NETFILTER_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
-CONFIG_NF_TABLES=y
-CONFIG_NF_TABLES_NETDEV=y
-CONFIG_NF_FLOW_TABLE=y
-CONFIG_NF_FLOW_TABLE_HW=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_NET_ACT_POLICE=y
 
 # ======================
 # 网卡驱动优化 (Intel I226)
 # ======================
+CONFIG_IGC_DCA=y
 CONFIG_IGC=y
+CONFIG_IGC_HWMON=y
 CONFIG_IGC_DIM=y
+CONFIG_IGC_VLAN_STRIPPING=y
+CONFIG_IGC_LRO=y
 CONFIG_IGC_TSN=y
+CONFIG_IGC_LATENCY_TOLERANCE=y
 CONFIG_IGC_TAPRIO=y
 CONFIG_IGC_QUEUES=4
+CONFIG_IGC_RX_POLLING=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_GRO=y
+CONFIG_IGC_RX_COPYBREAK=1024
+CONFIG_IGC_RX_NAPI_WEIGHT=256
+CONFIG_IGC_RSS=4
 CONFIG_IGC_TSO=y
-CONFIG_IGC_RX_COPYBREAK=256
 
 # ======================
 # 中断与队列优化
 # ======================
+CONFIG_XPS=y
+CONFIG_XPS_DEFAULT_QUEUES=4
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_POLL=y
+CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_HARDIRQS_SW_RESEND=y
+CONFIG_IRQ_DOMAIN_HIERARCHY=y
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
+
+# ======================
+# 文件系统与模块
+# ======================
+CONFIG_MODULE_COMPRESS_XZ=y
+CONFIG_SQUASHFS_XZ=y
+CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_BCACHEFS=y
+CONFIG_FS_VERITY=y
+CONFIG_PAGE_SIZE_4KB=y
 
 # ======================
 # 内核模块配置
 # ======================
 CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
+CONFIG_PACKAGE_kmod-nft-bridge=y
+CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-nf-flowoffload=y
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
 
 # ======================
 # 用户态工具与库
 # ======================
 CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_nftables-json=y
+CONFIG_PACKAGE_libnftnl=y
+CONFIG_PACKAGE_libtirpc=y
+CONFIG_PACKAGE_clang=y
+CONFIG_PACKAGE_llvm=y
+CONFIG_PACKAGE_ip-full=y
+CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
-
-# ======================
-# IPv6支持
-# ======================
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
+CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_ipv6helper=y
 
 # ======================
 # LuCI应用配置
@@ -151,3 +264,11 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 
+# ======================
+# IPv6支持
+# ======================
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IPV6_ROUTE_INFO=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_IPV6_OPTIMISTIC_DAD=y
+CONFIG_IPV6_SUBTREES=y
