更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -15,17 +15,13 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
-CONFIG_LLVM_TARGET_X86=y
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
-CONFIG_KERNEL_LTO_CLANG_THIN=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
-CONFIG_KERNEL_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y
-CONFIG_KERNEL_BINUTILS_STRINGS=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
 
@@ -38,21 +34,19 @@ CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 CONFIG_STACKPROTECTOR_STRONG=y
-CONFIG_RANDUMIZE_KSTACK_OFFSET=y
+CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_ZERO_CALL_USED_REGS=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
-CONFIG_CRYPTO_DEV_PADLOCK=y
-CONFIG_CRYPTO_DEV_PADLOCK_AES=y
-CONFIG_CRYPTO_DEV_PADLOCK_SHA=y
 
 # ======================
 # 硬件特定优化 (Intel J4125)
 # ======================
 CONFIG_SCHED_PDS=y
 CONFIG_SCHED_MC_PRIO=y
+CONFIG_PREEMPT=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ_FULL_ALL=y
@@ -66,7 +60,6 @@ CONFIG_SCHED_CORE_LLC=y
 CONFIG_CPU_ISOLATION=y
 CONFIG_MIGRATION=y
 CONFIG_RCU_NOCB_CPU=y
-CONFIG_PREEMPT=y
 CONFIG_HZ=1000
 CONFIG_INTEL_EPB=y
 CONFIG_INTEL_PSTATE=y
@@ -79,6 +72,7 @@ CONFIG_ACPI_CPPC_CPUFREQ=y
 CONFIG_ACPI_CPPC_LIB=y
 CONFIG_INTEL_TCC=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
+CONFIG_INTEL_IDLE=n
 
 # ======================
 # 内存管理优化 (8GB专用)
@@ -97,11 +91,7 @@ CONFIG_PAGE_POOL=y
 CONFIG_PAGE_POOL_STATS=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_STATS=y
 CONFIG_KFENCE=y
-CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
-CONFIG_ARCH_WANT_OPTIMIZE_DAX_VMEMMAP=y
-CONFIG_ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_RANDOMIZE_BASE=y
@@ -116,7 +106,7 @@ CONFIG_NET_FLOW_LIMIT=y
 CONFIG_TCP_CONG_BBR3=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
-CONFIG_CONNECT_IP_ROUTE_MULTIPATH=y
+CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
@@ -134,13 +124,12 @@ CONFIG_NET_NS=y
 CONFIG_NET_NS_DELAYED=y
 
 # ======================
-# Netfilter配置
+# Netfilter与NAT加速配置
 # ======================
 CONFIG_NF_NAT_FULLCONE=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_NAT=y
-CONFIG_NF_NAT_NEEDED=y
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NF_CONNTRACK_IPV4=y
@@ -215,7 +204,7 @@ CONFIG_FS_VERITY=y
 CONFIG_PAGE_SIZE_4KB=y
 
 # ======================
-# 内核模块配置
+# 内核模块与流表加速
 # ======================
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
