更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -124,18 +124,18 @@ CONFIG_NET_NS=y
 CONFIG_NET_NS_DELAYED=y
 
 # ======================
-# Netfilter与NAT加速配置
+# Netfilter与NAT加速配置（全锥形NAT+流量卸载相关）
 # ======================
-CONFIG_NF_NAT_FULLCONE=y
-CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_NAT=y
+CONFIG_NF_NAT_FULLCONE=y                   # 启用全锥形NAT
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_NF_DEFRAG_IPV4=y
 CONFIG_NF_DEFRAG_IPV6=y
+CONFIG_NF_NAT=y
 CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
@@ -146,11 +146,20 @@ CONFIG_NF_TABLES_IPV4=y
 CONFIG_NF_TABLES_IPV6=y
 CONFIG_NF_TABLES_NETDEV=y
 CONFIG_NF_TABLES_BRIDGE=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
+CONFIG_NETFILTER_FLOW_OFFLOAD=y            # 启用软件流表卸载
+CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y   # xt flowoffload目标
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NET_ACT_POLICE=y
+# 相关内核模块强制启用
+CONFIG_PACKAGE_kmod-nft-fullcone=y         # nft全锥形NAT模块
+CONFIG_PACKAGE_kmod-nf-flow=y              # flowoffload核心
+CONFIG_PACKAGE_kmod-nf-flowoffload=y       # flowoffload增强
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y # conntrack netlink（高性能NAT跟踪）
+CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-socket=y
 
 # ======================
 # 网卡驱动优化 (Intel I226)
@@ -219,7 +228,7 @@ CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y      # 再次确保全锥形NAT
 CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-nf-flowoffload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
