--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -196,7 +196,7 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 # ======================
 # 文件系统与模块
 # ======================
-CONFIG_MODULE_COMPRESS_XZ=y
+CONFIG_MODULE_COMPRE SS_XZ=y
 CONFIG_SQUASHFS_XZ=y
 CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
 CONFIG_BCACHEFS=y
@@ -204,7 +204,7 @@ CONFIG_FS_VERITY=y
 CONFIG_PAGE_SIZE_4KB=y
 
 # ======================
-# 内核模块与流表加速
+# 内核模块与流表加速 (适配nftables/firewall4)
 # ======================
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
@@ -213,10 +213,12 @@ CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
+
+# NFTables核心模块
 CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
@@ -224,53 +226,28 @@ CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-nf-flowoffload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
-CONFIG_PACKAGE_dnsmasq_full_ipset=y
-CONFIG_PACKAGE_arptables-nft=y
-CONFIG_PACKAGE_ebtables-nft=y
-CONFIG_PACKAGE_xtables-nft=y
-CONFIG_PACKAGE_ip6tables-nft=y
-CONFIG_PACKAGE_iptables-nft=y
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-CONFIG_PACKAGE_iptables-mod-iprange=y
-CONFIG_PACKAGE_iptables-mod-nat-extra=y
-CONFIG_PACKAGE_iptables-mod-socket=y
-CONFIG_PACKAGE_iptables-mod-tproxy=y
 
-# ======================
-# Netfilter 核心依赖
-# ======================
+# Netfilter核心依赖
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 
-# ======================
-# iptables (IPv4) 支持
-# ======================
-CONFIG_PACKAGE_iptables=y
-CONFIG_PACKAGE_iptables-mod-ipopt=y
-CONFIG_PACKAGE_iptables-mod-extra=y
-CONFIG_PACKAGE_iptables-mod-ulog=y
-CONFIG_PACKAGE_kmod-ipt-core=y
-CONFIG_PACKAGE_kmod-ipt-nat=y
+# 加密与文件系统模块
+CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
 
 # ======================
-# ip6tables (IPv6) 支持
+# 用户态工具与库 (nftables专用)
 # ======================
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ip6tables-extra=y
-CONFIG_PACKAGE_ip6tables-mod-nat=y
-CONFIG_PACKAGE_kmod-ip6tables=y
-CONFIG_PACKAGE_kmod-ipt-nat6=y
-
-# ======================
-# 用户态工具与库
-# ======================
-CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_nftables-json=y
+CONFIG_PACKAGE_nftables-no-json=y
 CONFIG_PACKAGE_libnftnl=y
+CONFIG_PACKAGE_libnetfilter-conntrack=y
+CONFIG_PACKAGE_libnetfilter-queue=y
+CONFIG_PACKAGE_libnetfilter-log=y
+
+# 基础工具
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_clang=y
 CONFIG_PACKAGE_llvm=y
@@ -290,6 +267,7 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
+CONFIG_PACKAGE_luci-app-firewall4=y
 
 # ======================
 # IPv6支持
