--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -45,19 +45,15 @@ CONFIG_RANDOMIZE_BASE=y
 # ======================
 # 硬件特定优化 (Intel J4125)
 # ======================
-CONFIG_SCHED_PDS=y
-CONFIG_SCHED_MC_PRIO=y
+# 调度器恢复为默认的CFS
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ_FULL_ALL=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SCHED_CORE=y
-CONFIG_SCHED_MC=y
 CONFIG_SCHED_HRTICK=y
 CONFIG_RCU_BOOST=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_SCHED_CORE_LLC=y
 CONFIG_CPU_ISOLATION=y
 CONFIG_MIGRATION=y
 CONFIG_RCU_NOCB_CPU=y
@@ -225,7 +221,6 @@ CONFIG_PACKAGE_kmod-nf-nat6=y
 
 # 加密与文件系统模块
 CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
 
 # ======================
 # 用户态工具与库 (nftables专用)
@@ -239,8 +234,6 @@ CONFIG_PACKAGE_libnetfilter-log=y
 
 # 基础工具
 CONFIG_PACKAGE_libtirpc=y
-CONFIG_PACKAGE_clang=y
-CONFIG_PACKAGE_llvm=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
@@ -253,7 +246,6 @@ CONFIG_PACKAGE_ipv6helper=y
 # LuCI应用配置
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
