--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -45,15 +45,19 @@ CONFIG_RANDOMIZE_BASE=y
 # ======================
 # 硬件特定优化 (Intel J4125)
 # ======================
-# 调度器恢复为默认的CFS
+# 已移除PDS调度器相关配置，启用默认CFS调度器
+CONFIG_SCHED_MC_PRIO=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ_FULL_ALL=y
 CONFIG_HIGH_RES_TIMERS=y
+CONFIG_SCHED_CORE=y
+CONFIG_SCHED_MC=y
 CONFIG_SCHED_HRTICK=y
 CONFIG_RCU_BOOST=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
+CONFIG_SCHED_CORE_LLC=y
 CONFIG_CPU_ISOLATION=y
 CONFIG_MIGRATION=y
 CONFIG_RCU_NOCB_CPU=y
@@ -69,7 +73,7 @@ CONFIG_ACPI_CPPC_CPUFREQ=y
 CONFIG_ACPI_CPPC_LIB=y
 CONFIG_INTEL_TCC=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
-CONFIG_INTEL_IDLE=y
+CONFIG_INTEL_IDLE=n
 
 # ======================
 # 内存管理优化 (8GB专用)
@@ -180,7 +184,7 @@ CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_PCI_MSI_IRQ_DOMARY=y
 CONFIG_IRQ_POLL=y
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_GENERIC_IRQ_IPI=y
@@ -190,7 +194,17 @@ CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 
 # ======================
-# 内核模块与流表加速 (适配nftables/firewall4)
+# 文件系统与模块
+# ======================
+CONFIG_MODULE_COMPRESS_XZ=y
+CONFIG_SQUASHFS_XZ=y
+CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_BCACHEFS=y
+CONFIG_FS_VERITY=y
+CONFIG_PAGE_SIZE_4KB=y
+
+# ======================
+# 内核模块与流表加速
 # ======================
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
@@ -199,12 +213,10 @@ CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
-
-# NFTables核心模块
 CONFIG_PACKAGE_kmod-nft-core=y
-CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
+CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-offload=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
@@ -212,27 +224,56 @@ CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-nf-flowoffload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-reject=y
+CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=y
+CONFIG_PACKAGE_arptables-nft=y
+CONFIG_PACKAGE_ebtables-nft=y
+CONFIG_PACKAGE_xtables-nft=y
+CONFIG_PACKAGE_ip6tables-nft=y
+CONFIG_PACKAGE_iptables-nft=y
+CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_PACKAGE_iptables-mod-iprange=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_iptables-mod-socket=y
+CONFIG_PACKAGE_iptables-mod-tproxy=y
 
-# Netfilter核心依赖
+# ======================
+# Netfilter 核心依赖
+# ======================
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 
-# 加密与文件系统模块
-CONFIG_PACKAGE_kmod-crypto-sha256=y
+# ======================
+# iptables (IPv4) 支持
+# ======================
+CONFIG_PACKAGE_iptables=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_iptables-mod-ulog=y
+CONFIG_PACKAGE_kmod-ipt-core=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
 
 # ======================
-# 用户态工具与库 (nftables专用)
+# ip6tables (IPv6) 支持
 # ======================
+CONFIG_PACKAGE_ip6tables=y
+CONFIG_PACKAGE_ip6tables-extra=y
+CONFIG_PACKAGE_ip6tables-mod-nat=y
+CONFIG_PACKAGE_kmod-ip6tables=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+
+# ======================
+# 用户态工具与库
+# ======================
+CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_libnftnl=y
-CONFIG_PACKAGE_libnetfilter-conntrack=y
-CONFIG_PACKAGE_libnetfilter-queue=y
-CONFIG_PACKAGE_libnetfilter-log=y
-
-# 基础工具
 CONFIG_PACKAGE_libtirpc=y
+CONFIG_PACKAGE_clang=y
+CONFIG_PACKAGE_llvm=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
@@ -245,10 +286,10 @@ CONFIG_PACKAGE_ipv6helper=y
 # LuCI应用配置
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
+CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
-CONFIG_PACKAGE_luci-app-firewall=y
 
 # ======================
 # IPv6支持
