更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -73,7 +73,7 @@ CONFIG_ACPI_CPPC_CPUFREQ=y
 CONFIG_ACPI_CPPC_LIB=y
 CONFIG_INTEL_TCC=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
-CONFIG_INTEL_IDLE=n
+CONFIG_INTEL_IDLE=y
 
 # ======================
 # 内存管理优化 (8GB专用)
