更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -156,12 +156,9 @@ CONFIG_IGC=y
 CONFIG_IGC_HWMON=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_LRO=y
-CONFIG_IGC_TSN=y
-CONFIG_IGC_LATENCY_TOLERANCE=y
-CONFIG_IGC_TAPRIO=y
+CONFIG_IGC_LRO=n
 CONFIG_IGC_QUEUES=4
-CONFIG_IGC_RX_POLLING=y
+CONFIG_IGC_RX_POLLING=n
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GSO=y
@@ -181,23 +178,13 @@ CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_POLL=y
-CONFIG_IRQ_FORCED_THREADING=y
+CONFIG_IRQ_POLL=n
+CONFIG_IRQ_FORCED_THREADING=n
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_HARDIRQS_SW_RESEND=y
+CONFIG_HARDIRQS_SW_RESEND=n
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
-
-# ======================
-# 文件系统与模块
-# ======================
-CONFIG_MODULE_COMPRESS_XZ=y
-CONFIG_SQUASHFS_XZ=y
-CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
-CONFIG_BCACHEFS=y
-CONFIG_FS_VERITY=y
-CONFIG_PAGE_SIZE_4KB=y
 
 # ======================
 # 内核模块与流表加速 (适配nftables/firewall4)
