更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -18,10 +18,8 @@ CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO=y
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_KERNEL_OPTIMIZE_O3=y
 CONFIG_OPTIMIZE_INLINING=y
-CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm"
 
@@ -37,7 +35,7 @@ CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_ZERO_CALL_USED_REGS=y
-CONFIG_SECURITY_SELINUX=y
+CONFIG_SECURITY_SELINUX=n
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
 CONFIG_RANDOMIZE_BASE=y
@@ -47,14 +45,14 @@ CONFIG_RANDOMIZE_BASE=y
 # ======================
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_DYNAMIC=y
-CONFIG_NO_HZ_FULL=y
-CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_NO_HZ_FULL=n
+CONFIG_NO_HZ_FULL_ALL=n
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SCHED_CORE=y
+CONFIG_SCHED_CORE=n
 CONFIG_SCHED_HRTICK=y
 CONFIG_RCU_BOOST=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_CPU_ISOLATION=y
+CONFIG_CPU_ISOLATION=n
 CONFIG_MIGRATION=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_HZ=1000
@@ -79,16 +77,16 @@ CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_COMPACTION=y
-CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
-CONFIG_DAMON=y
-CONFIG_DAMON_VADDR=y
-CONFIG_DAMON_PADDR=y
-CONFIG_DAMON_RECLAIM=y
+CONFIG_INIT_ON_ALLOC_DEFAULT_ON=n
+CONFIG_DAMON=n
+CONFIG_DAMON_VADDR=n
+CONFIG_DAMON_PADDR=n
+CONFIG_DAMON_RECLAIM=n
 CONFIG_PAGE_POOL=y
-CONFIG_PAGE_POOL_STATS=y
+CONFIG_PAGE_POOL_STATS=n
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_KFENCE=y
+CONFIG_KFENCE=n
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 
@@ -146,7 +144,7 @@ CONFIG_NETFILTER_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
-CONFIG_NET_ACT_POLICE=y
+
 
 # ======================
 # 网卡驱动优化 (Intel I226)
