--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -35,24 +35,19 @@ CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_ZERO_CALL_USED_REGS=y
-CONFIG_SECURITY_SELINUX=n
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
 CONFIG_RANDOMIZE_BASE=y
 
 # ======================
-# 硬件特定优化 (Intel J4125) - 移除了PDS调度器相关配置
+# 硬件特定优化 (Intel J4125)
 # ======================
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_DYNAMIC=y
-CONFIG_NO_HZ_FULL=n
-CONFIG_NO_HZ_FULL_ALL=n
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SCHED_CORE=n
 CONFIG_SCHED_HRTICK=y
 CONFIG_RCU_BOOST=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_CPU_ISOLATION=n
 CONFIG_MIGRATION=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_HZ=1000
@@ -77,18 +72,11 @@ CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_COMPACTION=y
-CONFIG_INIT_ON_ALLOC_DEFAULT_ON=n
-CONFIG_DAMON=n
-CONFIG_DAMON_VADDR=n
-CONFIG_DAMON_PADDR=n
-CONFIG_DAMON_RECLAIM=n
-CONFIG_PAGE_POOL=y
-CONFIG_PAGE_POOL_STATS=n
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_KFENCE=n
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_PAGE_POOL=y
 
 # ======================
 # 网络协议栈优化
@@ -145,7 +133,6 @@ CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 
-
 # ======================
 # 网卡驱动优化 (Intel I226)
 # ======================
@@ -154,9 +141,6 @@ CONFIG_IGC=y
 CONFIG_IGC_HWMON=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_LRO=n
-CONFIG_IGC_QUEUES=4
-CONFIG_IGC_RX_POLLING=n
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GSO=y
@@ -165,6 +149,7 @@ CONFIG_IGC_RX_COPYBREAK=1024
 CONFIG_IGC_RX_NAPI_WEIGHT=256
 CONFIG_IGC_RSS=4
 CONFIG_IGC_TSO=y
+CONFIG_IGC_QUEUES=4
 
 # ======================
 # 中断与队列优化
@@ -176,11 +161,8 @@ CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_POLL=n
-CONFIG_IRQ_FORCED_THREADING=n
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_HARDIRQS_SW_RESEND=n
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 
@@ -195,7 +177,7 @@ CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 
-# NFTables核心模块 - 完善了nftables配置
+# NFTables核心模块
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
@@ -220,7 +202,7 @@ CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-crypto-sha256=y
 
 # ======================
-# 用户态工具与库 (nftables专用) - 完善了nftables工具链
+# 用户态工具与库 (nftables专用)
 # ======================
 CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_libnftnl=y
