更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -169,30 +169,67 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 # ======================
 # BPF相关配置 (新增部分)
 # ======================
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_DEFAULT_ON=y
-CONFIG_HAVE_EBPF_JIT=y
-CONFIG_BPF_EVENTS=y
-CONFIG_BPF_STREAM_PARSER=y
-CONFIG_CGROUP_BPF=y
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_BPF_LIRC_MODE2=y
-CONFIG_LWTUNNEL_BPF=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_FTRACE_SYSCALLS=y
-CONFIG_BPF_KPROBE_OVERRIDE=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_CLS_FLOWER=y
-CONFIG_NET_ACT_POLICE=y
-CONFIG_NET_ACT_GACT=y
-CONFIG_NET_ACT_MIRRED=y
-CONFIG_NET_ACT_SKBEDIT=y
-CONFIG_XDP_SOCKETS=y
-CONFIG_XDP_SOCKETS_DIAG=y
+#
+# eBPF 和 BPF 内核配置
+#
+# 核心 BPF 设置
+#
+CONFIG_BPF=y                  # 启用 BPF 子系统
+CONFIG_BPF_SYSCALL=y          # 启用 bpf() 系统调用
+CONFIG_BPF_JIT=y              # 启用 BPF 即时编译器
+CONFIG_BPF_JIT_ALWAYS_ON=y    # 始终使用 JIT 编译 BPF（安全/性能优化）
+CONFIG_HAVE_EBPF_JIT=y        # 架构支持 eBPF JIT
+
+#
+# BTF (BPF 类型格式) - CO-RE (一次编译，到处运行) 必需功能
+#
+CONFIG_DEBUG_INFO_BTF=y       # 为内核和模块生成 BTF 类型信息
+
+#
+# 可观测性与追踪
+#
+CONFIG_BPF_EVENTS=y           # 允许 BPF 程序附加到事件
+CONFIG_KPROBES=y              # 启用内核探针 (kprobes)
+CONFIG_UPROBES=y              # 启用用户空间探针 (uprobes)
+CONFIG_TRACEPOINTS=y          # 启用追踪点基础设施
+CONFIG_FTRACE=y               # 启用函数追踪基础设施
+CONFIG_FUNCTION_TRACER=y      # 启用函数追踪
+CONFIG_FPROBE=y               # 启用 fprobe (函数入口/出口探针)
+CONFIG_FTRACE_SYSCALLS=y      # 启用系统调用追踪
+CONFIG_BPF_KPROBE_OVERRIDE=y  # 允许 BPF 覆盖 kprobe 返回值
+
+#
+# 网络功能
+#
+CONFIG_NET_CLS_BPF=y          # 基于 BPF 的流量分类器
+CONFIG_NET_ACT_BPF=y          # 基于 BPF 的流量动作
+CONFIG_NET_SCH_INGRESS=y      # 用于流量控制的入口队列规则
+CONFIG_NET_CLS_FLOWER=y       # Flower 流量分类器
+CONFIG_NET_ACT_POLICE=y       # 流量监管动作
+CONFIG_NET_ACT_GACT=y         # 通用流量动作
+CONFIG_NET_ACT_MIRRED=y       # 流量镜像/重定向动作
+CONFIG_NET_ACT_SKBEDIT=y      # SKB 编辑动作
+CONFIG_LWTUNNEL_BPF=y         # 基于 BPF 的轻量级隧道
+CONFIG_XDP_SOCKETS=y          # 用于快速数据包处理的 XDP 套接字
+CONFIG_XDP_SOCKETS_DIAG=y     # XDP 套接字诊断功能
+CONFIG_NET_XDP=y              # 网络核心中的 XDP 支持
+
+#
+# 控制组 (Cgroups)
+#
+CONFIG_CGROUP_BPF=y           # 为控制组提供 BPF 支持
+
+#
+# 安全性
+#
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y # 默认禁用非特权 BPF（安全加固）
+# CONFIG_BPF_LSM=y             # 可选：实验性 BPF Linux 安全模块支持
+
+#
+# 其他功能
+#
+CONFIG_BPF_STREAM_PARSER=y    # 用于套接字数据的 BPF 流解析器
+CONFIG_BPF_LIRC_MODE2=y       # 对 LIRC 模式2设备的 BPF 支持
 
 # ======================
 # 内核模块与流表加速 (适配nftables/firewall4)
