--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -26,15 +26,15 @@ CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar
 # ======================
 # 安全增强特性
 # ======================
-CONFIG_CFI_CLANG=y
-CONFIG_CFI_CLANG_SHADOW=y
+CONFIG_CFI_CLANG=n
+CONFIG_CFI_CLANG_SHADOW=n
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_RANDUMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_ZERO_CALL_USED_REGS=y
+CONFIG_ZERO_CALL_USED_REGS=n
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
 CONFIG_RANDOMIZE_BASE=y
@@ -47,22 +47,20 @@ CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SCHED_HRTICK=y
 CONFIG_RCU_BOOST=y
-CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_MIGRATION=y
-CONFIG_RCU_NOCB_CPU=y
+CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_HZ=1000
-CONFIG_INTEL_EPB=y
+CONFIG_RCU_NOCB_CPU=n          
+CONFIG_INTEL_TCC=n            
+
+# --- CPU频率管理 (针对Intel x86优化) ---
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_ACPI_CPPC_CPUFREQ=y
-CONFIG_ACPI_CPPC_LIB=y
-CONFIG_INTEL_TCC=y
-CONFIG_CRYPTO_AES_NI_INTEL=y
-CONFIG_INTEL_IDLE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y 
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y         
+CONFIG_INTEL_IDLE=y          
+CONFIG_INTEL_EPB=y            
+CONFIG_CRYPTO_AES_NI_INTEL=y  
 
 # ======================
 # 内存管理优化 (8GB专用)
@@ -170,41 +168,27 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 # BPF相关配置 (新增部分)
 # ======================
 CONFIG_BPF=y
-CONFIG_BPF_EVENTS=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_KPROBE_OVERRIDE=y
-CONFIG_BPF_LIRC_MODE2=y
 CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_BPF_UNPRIV_DEFAULT_OFF=y
 CONFIG_CGROUP_BPF=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_FPROBE=y
-CONFIG_FTRACE=y
-CONFIG_FTRACE_SYSCALLS=y
-CONFIG_FUNCTION_TRACER=y
 CONFIG_HAVE_EBPF_JIT=y
-CONFIG_KERNEL_DEBUG_INFO=y
-CONFIG_KERNEL_DEBUG_INFO_BTF=y
-CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
 CONFIG_KERNEL_XDP_SOCKETS=y
-CONFIG_KPROBES=y
 CONFIG_LWTUNNEL_BPF=y
 CONFIG_NET_ACT_BPF=y
+CONFIG_NET_CLS_BPF=y
+CONFIG_NET_XDP=y
+CONFIG_XDP_SOCKETS=y
+CONFIG_DEBUG_INFO_BTF=y
+
+# 核心网络流量控制
 CONFIG_NET_ACT_GACT=y
 CONFIG_NET_ACT_MIRRED=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_SKBEDIT=y
-CONFIG_NET_CLS_BPF=y
 CONFIG_NET_CLS_FLOWER=y
 CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_XDP=y
-CONFIG_TRACEPOINTS=y
-CONFIG_UPROBES=y
-CONFIG_XDP_SOCKETS=y
-CONFIG_XDP_SOCKETS_DIAG=y
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 
 # ======================
 # 内核模块与流表加速 (适配nftables/firewall4)
