--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -9,6 +9,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_DEBUG_INFO_NONE=y
 
 # ======================
 # 工具链与编译优化
@@ -30,10 +31,8 @@ CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 CONFIG_STACKPROTECTOR_STRONG=y
-CONFIG_RANDUMIZE_KSTACK_OFFSET=y
+CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
-CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
 CONFIG_RANDOMIZE_BASE=y
 
 # ======================
@@ -96,12 +95,14 @@ CONFIG_NET_SCH_MULTIQ=y
 CONFIG_NET_SCH_PIE=y
 CONFIG_NET_SCH_FQ_PIE=y
 CONFIG_NET_NS=y
-CONFIG_NET_NS_DELAYED=y
 CONFIG_NET_ACT_GACT=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_NET_CLS_FLOWER=y
 CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_CLS_ACT=y
+CONFIG_NET_SCH_FQ=y
+CONFIG_NET_SCH_HTB=y
 
 # ======================
 # Netfilter与NAT加速配置（全锥形NAT+流量卸载相关）
@@ -134,7 +135,6 @@ CONFIG_NETFILTER_XT_MATCH_STATE=y
 # ======================
 # 网卡驱动优化 (Intel I226)
 # ======================
-CONFIG_IGC_DCA=y
 CONFIG_IGC=y
 CONFIG_IGC_HWMON=y
 CONFIG_IGC_DIM=y
@@ -160,7 +160,6 @@ CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 
@@ -235,3 +234,11 @@ CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
 CONFIG_IPV6_SUBTREES=y
+
+# 电源管理优化
+CONFIG_PM_ADVANCED_DEBUG=y
+CONFIG_PM_SLEEP_DEBUG=y
+
+# 文件系统优化
+CONFIG_FS_ENCRYPTION=y
+CONFIG_FS_VERITY=y
