--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -50,8 +50,10 @@ CONFIG_HZ=1000
 # --- CPU频率管理 (针对Intel x86优化) ---
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_INTEL_IDLE=y
 CONFIG_INTEL_EPB=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
@@ -71,10 +73,9 @@ CONFIG_SLUB_FREELIST_HARDENED=y
 CONFIG_PAGE_POOL=y
 
 # ======================
-# 网络协议栈优化
+# 网络协议栈优化 (精简版)
 # ======================
-CONFIG_TCP_AO=y
-CONFIG_TCP_MD5SIG=y
+# 核心协议特性
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_TCP_CONG_BBR3=y
@@ -84,36 +85,26 @@ CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
+CONFIG_IP_TUNNEL=y
+CONFIG_NET_NS=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_NET_SCH_DEFAULT=y
 CONFIG_DEFAULT_FQ_CODEL=y
-CONFIG_NET_SCH_MQPRIO=y
-CONFIG_NET_EMATCH=y
-CONFIG_NET_ACT_MIRRED=y
-CONFIG_IP_TUNNEL=y
-CONFIG_NET_SCH_TAPRIO=y
-CONFIG_NET_SCH_MULTIQ=y
-CONFIG_NET_SCH_PIE=y
-CONFIG_NET_SCH_FQ_PIE=y
-CONFIG_NET_NS=y
-CONFIG_NET_ACT_GACT=y
-CONFIG_NET_ACT_POLICE=y
-CONFIG_NET_ACT_SKBEDIT=y
-CONFIG_NET_CLS_FLOWER=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_CLS_ACT=y
 CONFIG_NET_SCH_FQ=y
 CONFIG_NET_SCH_HTB=y
+CONFIG_NET_SCH_FQ_PIE=y
 
 # ======================
-# Netfilter与NAT加速配置（全锥形NAT+流量卸载相关）
+# Netfilter与NAT加速配置 (nftables 优化版)
 # ======================
-CONFIG_NF_NAT_FULLCONE=y
+
+# --- 核心基础 (必须启用) ---
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NF_CONNTRACK=y
-CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_DEFRAG_IPV4=y
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_NAT=y
@@ -121,103 +112,89 @@ CONFIG_NF_NAT_IPV4=y
 CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_SET=y
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_IPV4=y
 CONFIG_NF_TABLES_IPV6=y
 CONFIG_NF_TABLES_NETDEV=y
 CONFIG_NF_TABLES_BRIDGE=y
+CONFIG_NF_TABLES_ARP=y
+CONFIG_NFT_COUNTER=y
+CONFIG_NFT_CT=y
+CONFIG_NFT_NAT=y
+CONFIG_NFT_MASQ=y
+CONFIG_NFT_REDIR=y
+CONFIG_NFT_QUEUE=y
+CONFIG_NFT_LIMIT=y
+CONFIG_NFT_LOG=y
+CONFIG_NFT_REJECT=y
+CONFIG_NFT_REJECT_INET=y
+CONFIG_NFT_CONNLIMIT=y
+CONFIG_NFT_SYNPROXY=y
+CONFIG_NF_NAT_FULLCONE=y
 CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y CONFIG_NETFILTER_XT_TARGET_HARDWARE_OFFLOAD=y
 
 # ======================
 # 网卡驱动优化 (Intel I226)
 # ======================
-CONFIG_IGC=y
-CONFIG_IGC_HWMON=y
-CONFIG_IGC_DIM=y
-CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_RX_NAPI=y
-CONFIG_IGC_TX_NAPI=y
-CONFIG_IGC_GSO=y
-CONFIG_IGC_GRO=y
-CONFIG_IGC_RX_COPYBREAK=1024
-CONFIG_IGC_RX_NAPI_WEIGHT=256
-CONFIG_IGC_RSS=4
-CONFIG_IGC_TSO=y
-CONFIG_IGC_QUEUES=4
+CONFIG_IGC=y                    
+CONFIG_IGC_DIM=y               
+CONFIG_IGC_VLAN_STRIPPING=y    
+CONFIG_IGC_RX_NAPI=y           
+CONFIG_IGC_TX_NAPI=y           
+CONFIG_IGC_GSO=y               
+CONFIG_IGC_GRO=y               
+CONFIG_IGC_TSO=y               
 
 # ======================
 # 中断与队列优化
 # ======================
-CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_PCI_MSI=y
-CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_PCI_MSI=y               
+CONFIG_PCI_MSI_IRQ_DOMAIN=y    
+CONFIG_IRQ_AFFINITY_HINT=y     
+CONFIG_XPS=y                   
+CONFIG_RPS=y                   
+CONFIG_RFS_ACCEL=y             
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 
 # ======================
-# 内核模块与流表加速 (适配nftables/firewall4)
+# 内核模块与流表加速 (适配nftables/firewall4 - 优化版)
 # ======================
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-fq=y
-CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-sched-connmark=y
-CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-bonding=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
-
-# NFTables核心模块
-CONFIG_PACKAGE_kmod-nft-core=y
-CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-sched-core=y 
+CONFIG_PACKAGE_kmod-sched-fq=y   
+CONFIG_PACKAGE_kmod-sched-connmark=y 
+CONFIG_PACKAGE_kmod-ifb=y          
+CONFIG_PACKAGE_kmod-tcp-bbr=y     
+CONFIG_PACKAGE_kmod-nft-core=y    
+CONFIG_PACKAGE_kmod-nft-nat=y     
 CONFIG_PACKAGE_kmod-nft-netdev=y
-CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nft-offload=y    
 CONFIG_PACKAGE_kmod-nft-fullcone=y
-CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-nft-queue=y
-CONFIG_PACKAGE_kmod-nft-log=y
-CONFIG_PACKAGE_kmod-nft-limit=y
-
-# Netfilter核心依赖
-CONFIG_PACKAGE_kmod-nf-conntrack=y
-CONFIG_PACKAGE_kmod-nf-conntrack6=y
-CONFIG_PACKAGE_kmod-nf-nat=y
-CONFIG_PACKAGE_kmod-nf-nat6=y
-
-# 加密与文件系统模块
-CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-nf-flow=y        
+CONFIG_PACKAGE_kmod-nf-reject=y     
+CONFIG_PACKAGE_kmod-nf-conntrack=y  
+CONFIG_PACKAGE_kmod-nf-conntrack6=y 
+CONFIG_PACKAGE_kmod-nf-nat=y        
+CONFIG_PACKAGE_kmod-nf-nat6=y       
 
 # ======================
-# 用户态工具与库 (nftables专用)
+# 用户态工具与库 (nftables专用 - 优化版)
 # ======================
-CONFIG_PACKAGE_nftables-json=y
-CONFIG_PACKAGE_libnftnl=y
-CONFIG_PACKAGE_libnetfilter-conntrack=y
-CONFIG_PACKAGE_libnetfilter-queue=y
-CONFIG_PACKAGE_libnetfilter-log=y
-CONFIG_PACKAGE_jansson=y
-
-# 基础工具
-CONFIG_PACKAGE_libtirpc=y
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_ipv6helper=y
-
+CONFIG_PACKAGE_nftables-json=y  
+CONFIG_PACKAGE_libnftnl=y       
+CONFIG_PACKAGE_jansson=y        
+CONFIG_PACKAGE_ip-full=y        
+CONFIG_PACKAGE_ethtool=y        
+CONFIG_PACKAGE_irqbalance=y     
+CONFIG_PACKAGE_iperf3=y          
+      
 # ======================
 # LuCI应用配置
 # ======================
@@ -227,18 +204,6 @@ CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
 
-# ======================
-# IPv6支持
-# ======================
-CONFIG_IPV6_ROUTE_INFO=y
-CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
-CONFIG_IPV6_SUBTREES=y
 
-# 电源管理优化
-CONFIG_PM_ADVANCED_DEBUG=y
-CONFIG_PM_SLEEP_DEBUG=y
 
-# 文件系统优化
-CONFIG_FS_ENCRYPTION=y
-CONFIG_FS_VERITY=y
+
