更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -168,6 +168,7 @@ CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 # 内核模块与流表加速 (适配nftables/firewall4 - 优化版)
 # ======================
 CONFIG_PACKAGE_kmod-sched-core=y 
+CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-fq=y   
 CONFIG_PACKAGE_kmod-sched-connmark=y 
 CONFIG_PACKAGE_kmod-ifb=y          
